add option to hide automap coordinates
also make default map name color red like in the original doom and update mbf.cfg file

--- a/mbf.cfg
+++ b/mbf.cfg
@@ -9,17 +9,8 @@ config_help                   1
 [1-5(3)] selects default skill 1=TYTD 2=NTR 3=HMP 4=UV 5=NM 
 default_skill                 3
 
-[-1-7(-1)] code used by Allegro to select sounds driver, -1 is autodetect 
-sound_card                   -1
-
-[-1-9(-1)] code used by Allegro to select music driver, -1 is autodetect 
-music_card                   -1
-
-[0-1(1)] 1 enables voice detection prior to calling install sound 
-detect_voices                 1
-
 [0-1(0)] 1 to enable 640x400 resolution for rendering scenes 
-hires                         1
+hires                         0
 
 [0-1(1)] 1 to enable page flipping to avoid display tearing 
 page_flip                     1
@@ -49,7 +40,7 @@ max_player_corpse            32
 flashing_hom                  1
 
 [0-1(0)] 1 to show Framerate + Mode indicator 
-show_fps                      1
+show_fps                      0
 
 [0-2(2)] 1=take special steps ensuring demo sync, 2=only during recordings 
 demo_insurance                2
@@ -205,7 +196,7 @@ comp_model                    0
 comp_zerotags                 0
 
 [0-255(174)] key to turn right 
-key_right                   240
+key_right                    77
 
 [0-255(172)] key to turn left 
 key_left                     75
@@ -217,7 +208,7 @@ key_up                       72
 key_down                     80
 
 [0-255(174)] key to move right in a menu 
-key_menu_right              240
+key_menu_right               77
 
 [0-255(172)] key to move left in a menu 
 key_menu_left                75
@@ -229,25 +220,25 @@ key_menu_up                  72
 key_menu_down                80
 
 [0-255(127)] key to erase last character typed in a menu 
-key_menu_backspace          111
+key_menu_backspace          239
 
 [0-255(27)] key to leave a menu 
-key_menu_escape               1
+key_menu_escape             129
 
 [0-255(13)] key to select from menu or review past messages 
-key_menu_enter               96
+key_menu_enter              224
 
 [0-255(44)] key to strafe left (sideways left) 
-key_strafeleft               51
+key_strafeleft              179
 
 [0-255(46)] key to strafe right (sideways right) 
-key_straferight              52
+key_straferight             180
 
 [0-255(157)] key to fire current weapon 
 key_fire                    120
 
 [0-255(32)] key to open a door, use a switch 
-key_use                      57
+key_use                     185
 
 [0-255(184)] key to use with arrows to strafe 
 key_strafe                  121
@@ -256,7 +247,7 @@ key_strafe                  121
 key_speed                    54
 
 [0-255(188)] key to save current game 
-key_savegame                236
+key_savegame                 60
 
 [0-255(189)] key to restore from saved games 
 key_loadgame                 61
@@ -289,7 +280,7 @@ key_gamma                    87
 key_spy                      88
 
 [0-255(255)] key to pause the game 
-key_pause                   176
+key_pause                   127
 
 [0-255(186)] key to toggle always run mode 
 key_autorun                  58
@@ -298,16 +289,16 @@ key_autorun                  58
 key_chat                     20
 
 [0-255(127)] key to erase last character typed 
-key_backspace               111
+key_backspace               239
 
 [0-255(13)] key to select from menu or review past messages 
-key_enter                    96
+key_enter                   224
 
 [0-255(9)] key to toggle automap display 
-key_map                      15
+key_map                     143
 
 [0-255(174)] key to shift automap right 
-key_map_right               240
+key_map_right                77
 
 [0-255(172)] key to shift automap left 
 key_map_left                 75
@@ -319,13 +310,13 @@ key_map_up                   72
 key_map_down                 80
 
 [0-255(61)] key to enlarge automap 
-key_map_zoomin               13
+key_map_zoomin              141
 
 [0-255(45)] key to reduce automap 
-key_map_zoomout              74
+key_map_zoomout             202
 
 [0-255(48)] key to get max zoom for automap 
-key_map_gobig                11
+key_map_gobig               139
 
 [0-255(102)] key to toggle scrolling/moving with automap 
 key_map_follow               33
@@ -340,13 +331,13 @@ key_map_clear                46
 key_map_grid                 34
 
 [0-255(47)] key to spin 180 instantly 
-key_reverse                 122
+key_reverse                 250
 
 [0-255(61)] key to enlarge display 
-key_zoomin                   13
+key_zoomin                  141
 
 [0-255(45)] key to reduce display 
-key_zoomout                  74
+key_zoomout                 202
 
 [0-255(103)] key to chat with player 1 
 key_chatplayer1              34
@@ -361,37 +352,37 @@ key_chatplayer3              48
 key_chatplayer4              19
 
 [0-255(48)] key to toggle between two most preferred weapons with ammo 
-key_weapontoggle             11
+key_weapontoggle            139
 
 [0-255(49)] key to switch to weapon 1 (fist/chainsaw) 
-key_weapon1                   2
+key_weapon1                 130
 
 [0-255(50)] key to switch to weapon 2 (pistol) 
-key_weapon2                   3
+key_weapon2                 131
 
 [0-255(51)] key to switch to weapon 3 (supershotgun/shotgun) 
-key_weapon3                   4
+key_weapon3                 132
 
 [0-255(52)] key to switch to weapon 4 (chaingun) 
-key_weapon4                   5
+key_weapon4                 133
 
 [0-255(53)] key to switch to weapon 5 (rocket launcher) 
-key_weapon5                   6
+key_weapon5                 134
 
 [0-255(54)] key to switch to weapon 6 (plasma rifle) 
-key_weapon6                   7
+key_weapon6                 135
 
 [0-255(55)] key to switch to weapon 7 (bfg9000) 
-key_weapon7                   8
+key_weapon7                 136
 
 [0-255(56)] key to switch to weapon 8 (chainsaw) 
-key_weapon8                 214
+key_weapon8                 137
 
 [0-255(57)] key to switch to weapon 9 (supershotgun) 
-key_weapon9                 200
+key_weapon9                 138
 
 [0-255(42)] key to take a screenshot (devparm independent) 
-key_screenshot               55
+key_screenshot              183
 
 [0-255(199)] shortcut key to enter setup menu 
 key_setup                    71
@@ -533,6 +524,9 @@ mapcolor_ply4               176
 
 [0-255(252)] color used for friends *
 mapcolor_frnd               252
+
+[0-1(0)] 1 to show player coordinates in the automap *
+map_show_coord                0
 
 [0-1(1)] 1 to show automap pointer coordinates in non-follow mode *
 map_point_coord               1
