error handling for dosbox

--- a/dosbox.mbftest.conf
+++ b/dosbox.mbftest.conf
@@ -5,5 +5,5 @@ fullscreen=true
 mount c .
 c:
 bin\cwsdpmi
-mbf -iwad doom.wad -file sigil.wad -warp 5 1
+mbf -iwad doom.wad -file sigil.wad -file sigil2.wad -warp 6 1
 exit
